Added BigO and changed math spacing

--- a/template.tex
+++ b/template.tex
@@ -24,10 +24,10 @@ Krom toho se hodí umět odkazovat; třeba na \href{https://en.wikibooks.org/wik
 \subsection*{Matematika}
 
 Můžeme ji zapisovat v řádku: $e^{ix} = \cos{x} + i \sin{x}$, nebo zarovnaně:
-
-\begin{gather*}
+%
+$$
     a_0=\frac{1}{\pi}\int\limits_{-\pi}^{\pi}f(x)\,\mathrm{d}x
-\end{gather*}
+$$
 
 Krom toho se hodí umět kreslit\footnote{Kreslit je zde samozřejmě použito velmi volně; kreslí za nás počítač. Byla to však skvělá příležitost pro to ukázat poznámku pod čarou.}!
 
@@ -48,7 +48,7 @@ Krom toho se hodí umět kreslit\footnote{Kreslit je zde samozřejmě použito v
     \draw (4,-1) node {$x=l$};
 \end{tikzpicture}
 
-Pro zapisování asymptotické složitosti můžete použít tyhle cool písmenka: $\mathcal{O}(n \log n)$
+Pro zapisování asymptotické složitosti můžete použít tyhle cool písmenka: $\BigO(n \log n)$
 
 \begin{center}
     {\large Doufám, že se ti tento vzor bude hodit. Hodně štěstí při řešení!}
